@@ -8,6 +8,7 @@ date Version 3.00.46 (Beta 3)
 * Fixed FS#199 - "tooltips lost on XRC import"
 * Fixed import of "enabled", "hidden", and "subclass" properties.
 * Fixed "FS#208 - Error in generated OnUpdateUI event handler registration code."
++ Added "FS#211 - Optimized code/xrc generation in preview editors"
 
 06/13/2007 Version 3.00.45 (Beta 3)
 * Fixed FS#198 - "Wrong place of the ID in a wxHyperlinkCtrl."
